Fix line chart spacing

--- a/src/styles/shared/_legends.scss
+++ b/src/styles/shared/_legends.scss
@@ -5,6 +5,7 @@
   color: $color-ink-light;
   font-size: 12px;
   font-weight: 500;
+  margin: 0;
 }
 
 @mixin legend-container {
